--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "css-loader": "^0.27.3",
     "extract-text-webpack-plugin": "^2.1.2",
     "node-sass": "^4.5.3",
+    "ramda": "^0.24.1",
     "require-extension-hooks-vue": "^0.2.1",
     "resolve-url-loader": "^2.0.3",
     "sass-loader": "^6.0.2",
