Add 'roving-tabindex-element-list' as a dependency

--- a/package.json
+++ b/package.json
@@ -35,17 +35,16 @@
     "ramda": "^0.25.0",
     "require-extension-hooks-vue": "^0.4.1",
     "resolve-url-loader": "^2.1.1",
+    "roving-tabindex-element-list": "^1.0.1",
     "sass-loader": "^6.0.2",
     "set-blocking": "^2.0.0",
     "shuffle-array": "^1.0.1",
     "style-loader": "^0.19.0",
+    "svg-inline-loader": "^0.8.0",
+    "vue": "^2.5.2",
     "vue-loader": "^13.3.0",
     "vue-template-compiler": "^2.5.2",
     "webpack": "^3.8.1",
     "yargs-parser": "^8.0.0"
-  },
-  "dependencies": {
-    "svg-inline-loader": "^0.8.0",
-    "vue": "^2.5.2"
   }
 }
