--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "style-loader": "^0.19.0",
     "svg-inline-loader": "^0.8.0",
     "vue": "^2.5.2",
+    "vuedraggable": "^2.14.1",
     "vue-loader": "^13.3.0",
     "vue-template-compiler": "^2.5.2",
     "webpack": "^3.8.1",
