--- a/package.json
+++ b/package.json
@@ -42,10 +42,13 @@
     "style-loader": "^0.19.0",
     "svg-inline-loader": "^0.8.0",
     "vue": "^2.5.2",
-    "vuedraggable": "^2.14.1",
     "vue-loader": "^13.3.0",
     "vue-template-compiler": "^2.5.2",
+    "vuedraggable": "^2.14.1",
     "webpack": "^3.8.1",
     "yargs-parser": "^13.1.2"
+  },
+  "dependencies": {
+    "he": "^1.2.0"
   }
 }
