--- a/package.json
+++ b/package.json
@@ -20,12 +20,12 @@
   "author": "Tom Arild Jakobsen <tajakobsen@gmail.com>",
   "license": "MIT",
   "devDependencies": {
-    "ava": "^4.3.0",
-    "@babel/cli": "^7.18.6",
-    "@babel/core": "^7.18.6",
-    "@babel/plugin-proposal-object-rest-spread": "^7.18.6",
+    "ava": "^4.3.1",
+    "@babel/cli": "^7.18.10",
+    "@babel/core": "^7.18.10",
+    "@babel/plugin-proposal-object-rest-spread": "^7.18.9",
     "@babel/plugin-transform-object-assign": "^7.18.6",
-    "@babel/preset-env": "^7.18.6",
+    "@babel/preset-env": "^7.18.10",
     "babel-loader": "^8.2.5",
     "cross-env": "^7.0.3",
     "css-loader": "^6.7.1",
@@ -39,20 +39,21 @@
     "sass-loader": "^13.0.2",
     "set-blocking": "^2.0.0",
     "shuffle-array": "^1.0.1",
-    "style-loader": "3.3.1",
+    "style-loader": "^3.3.1",
     "svg-inline-loader": "^0.8.2",
     "vue": "^3.2.37",
     "vuedraggable": "^2.24.3",
     "vue-loader": "^17.0.0",
     "vue-style-loader": "^4.1.3",
-    "vue-template-compiler": "^2.7.1",
-    "webpack": "^5.73.0",
+    "vue-template-compiler": "^2.7.9",
+    "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0",
-    "yargs-parser": "^21.0.1"
+    "yargs-parser": "^21.1.1"
   },
   "overrides": {
-    "postcss": "^8.4.14",
-    "vue-template-compiler": "^2.7.1",
-    "webpack": "^5.73.0"
+    "postcss": "^8.4.16",
+    "scss-tokenizer": "^0.4.3",
+    "vue-template-compiler": "^2.7.9",
+    "webpack": "^5.74.0"
   }
 }
