--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "private": true,
   "scripts": {
     "test": "ava",
-    "build": "cross-env NODE_ENV='production' webpack -p",
+    "dev": "cross-env NODE_ENV='development' webpack",
+    "build": "cross-env NODE_ENV='production' webpack",
     "watch": "webpack --watch"
   },
   "repository": {
@@ -19,33 +20,40 @@
   "author": "Tom Arild Jakobsen <tajakobsen@gmail.com>",
   "license": "MIT",
   "devDependencies": {
-    "ava": "^5.1.0",
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.2",
-    "babel-plugin-transform-object-assign": "^6.22.0",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-preset-latest": "^6.22.0",
-    "code-point-at": "^1.1.0",
-    "cross-env": "^5.1.0",
-    "css-loader": "^0.28.7",
-    "extract-text-webpack-plugin": "^3.0.1",
-    "loader-utils": "^1.4.2",
-    "node-sass": "^7.0.0",
-    "ramda": "^0.25.0",
-    "require-extension-hooks-vue": "^0.4.1",
-    "resolve-url-loader": "^2.1.1",
-    "roving-tabindex-element-list": "^1.0.1",
-    "sass-loader": "^6.0.2",
+    "@babel/cli": "^7.18.10",
+    "@babel/core": "^7.18.10",
+    "@babel/plugin-proposal-object-rest-spread": "^7.18.9",
+    "@babel/plugin-transform-object-assign": "^7.18.6",
+    "@babel/preset-env": "^7.18.10",
+    "ava": "^4.3.1",
+    "babel-loader": "^8.2.5",
+    "cross-env": "^7.0.3",
+    "css-loader": "^6.7.1",
+    "loader-utils": "^3.2.0",
+    "mini-css-extract-plugin": "^2.6.1",
+    "node-sass": "^8.0.0",
+    "ramda": "^0.28.0",
+    "require-extension-hooks-vue": "^0.4.0",
+    "resolve-url-loader": "^5.0.0",
+    "roving-tabindex-element-list": "^1.2.0",
+    "sass-loader": "^13.0.2",
     "set-blocking": "^2.0.0",
     "shuffle-array": "^1.0.1",
-    "style-loader": "^0.19.0",
-    "svg-inline-loader": "^0.8.0",
-    "vue": "^2.5.2",
-    "vuedraggable": "^2.14.1",
-    "vue-loader": "^13.3.0",
-    "vue-template-compiler": "^2.5.2",
-    "webpack": "^3.8.1",
-    "yargs-parser": "^13.1.2"
+    "style-loader": "^3.3.1",
+    "svg-inline-loader": "^0.8.2",
+    "vue": "^3.2.37",
+    "vue-loader": "^17.0.0",
+    "vue-style-loader": "^4.1.3",
+    "vue-template-compiler": "^2.7.9",
+    "vuedraggable": "^2.24.3",
+    "webpack": "^5.74.0",
+    "webpack-cli": "^4.10.0",
+    "yargs-parser": "^21.1.1"
+  },
+  "overrides": {
+    "postcss": "^8.4.16",
+    "scss-tokenizer": "^0.4.3",
+    "vue-template-compiler": "^2.7.9",
+    "webpack": "^5.74.0"
   }
 }
